better cass update